--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "decompress-zip": "github:LiskHQ/decompress-zip#f46b0a3",
     "dotenv": "^4.0.0",
     "ejs": "=2.5.5",
+    "elastic-apm-node": "^1.12.0",
     "elasticsearch": "^14.1.0",
     "express": "^4.16.3",
     "express-domain-middleware": "=0.1.0",
